// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TabsComponent > Snapshot tests > should match snapshot with custom className 1`] = `
<div>
  <section
    class="custom-class"
  >
    <div
      data-testid="ods-tabs"
      data-value="tab1"
    >
      <div
        data-testid="ods-tab-list"
      >
        <div
          data-testid="tab-tab1"
          data-value="tab1"
        >
          <div>
            title tab1
          </div>
        </div>
        <div
          data-testid="tab-tab2"
          data-value="tab2"
        >
          <div>
            title tab2
          </div>
        </div>
        <div
          data-testid="tab-tab3"
          data-value="tab3"
        >
          <div>
            title tab3
          </div>
        </div>
      </div>
      <button
        data-testid="change-tab"
      >
        Change to tab2
      </button>
    </div>
    <div
      class="bg-[--ods-color-primary-050] border border-solid border-[--ods-color-primary-100] border-t-0"
    >
      <div>
        content tab1
      </div>
    </div>
  </section>
</div>
`;

exports[`TabsComponent > Snapshot tests > should match snapshot with custom contentElement 1`] = `
<div>
  <section>
    <div
      data-testid="ods-tabs"
      data-value="tab1"
    >
      <div
        data-testid="ods-tab-list"
      >
        <div
          data-testid="tab-tab1"
          data-value="tab1"
        >
          <div>
            title tab1
          </div>
        </div>
        <div
          data-testid="tab-tab2"
          data-value="tab2"
        >
          <div>
            title tab2
          </div>
        </div>
        <div
          data-testid="tab-tab3"
          data-value="tab3"
        >
          <div>
            title tab3
          </div>
        </div>
      </div>
      <button
        data-testid="change-tab"
      >
        Change to tab2
      </button>
    </div>
    <div
      class="bg-[--ods-color-primary-050] border border-solid border-[--ods-color-primary-100] border-t-0"
    >
      <div
        data-testid="custom-content-tab1"
      >
        Custom content for 
        tab1
      </div>
    </div>
  </section>
</div>
`;

exports[`TabsComponent > Snapshot tests > should match snapshot with custom item types 1`] = `
<div>
  <section>
    <div
      data-testid="ods-tabs"
      data-value="[object Object]"
    >
      <div
        data-testid="ods-tab-list"
      >
        <div
          data-testid="tab-[object Object]"
          data-value="[object Object]"
        >
          <span
            data-testid="title-1"
          >
            First
          </span>
        </div>
        <div
          data-testid="tab-[object Object]"
          data-value="[object Object]"
        >
          <span
            data-testid="title-2"
          >
            Second
          </span>
        </div>
      </div>
      <button
        data-testid="change-tab"
      >
        Change to tab2
      </button>
    </div>
    <div
      class="bg-[--ods-color-primary-050] border border-solid border-[--ods-color-primary-100] border-t-0"
    >
      <div
        data-testid="content-1"
      >
        Content 1
      </div>
    </div>
  </section>
</div>
`;

exports[`TabsComponent > Snapshot tests > should match snapshot with custom titleElement 1`] = `
<div>
  <section>
    <div
      data-testid="ods-tabs"
      data-value="tab1"
    >
      <div
        data-testid="ods-tab-list"
      >
        <div
          data-testid="tab-tab1"
          data-value="tab1"
        >
          <span
            data-testid="custom-title-tab1"
          >
            Custom 
            tab1
          </span>
        </div>
        <div
          data-testid="tab-tab2"
          data-value="tab2"
        >
          <span
            data-testid="custom-title-tab2"
          >
            Custom 
            tab2
          </span>
        </div>
        <div
          data-testid="tab-tab3"
          data-value="tab3"
        >
          <span
            data-testid="custom-title-tab3"
          >
            Custom 
            tab3
          </span>
        </div>
      </div>
      <button
        data-testid="change-tab"
      >
        Change to tab2
      </button>
    </div>
    <div
      class="bg-[--ods-color-primary-050] border border-solid border-[--ods-color-primary-100] border-t-0"
    >
      <div>
        content tab1
      </div>
    </div>
  </section>
</div>
`;

exports[`TabsComponent > Snapshot tests > should match snapshot with default props 1`] = `
<div>
  <section>
    <div
      data-testid="ods-tabs"
      data-value="tab1"
    >
      <div
        data-testid="ods-tab-list"
      >
        <div
          data-testid="tab-tab1"
          data-value="tab1"
        >
          <div>
            title tab1
          </div>
        </div>
        <div
          data-testid="tab-tab2"
          data-value="tab2"
        >
          <div>
            title tab2
          </div>
        </div>
        <div
          data-testid="tab-tab3"
          data-value="tab3"
        >
          <div>
            title tab3
          </div>
        </div>
      </div>
      <button
        data-testid="change-tab"
      >
        Change to tab2
      </button>
    </div>
    <div
      class="bg-[--ods-color-primary-050] border border-solid border-[--ods-color-primary-100] border-t-0"
    >
      <div>
        content tab1
      </div>
    </div>
  </section>
</div>
`;

exports[`TabsComponent > Snapshot tests > should match snapshot with empty items array 1`] = `
<div>
  <section>
    <div
      data-testid="ods-tabs"
    >
      <div
        data-testid="ods-tab-list"
      />
      <button
        data-testid="change-tab"
      >
        Change to tab2
      </button>
    </div>
    <div
      class="bg-[--ods-color-primary-050] border border-solid border-[--ods-color-primary-100] border-t-0"
    >
      <div>
        content undefined
      </div>
    </div>
  </section>
</div>
`;

exports[`TabsComponent > Snapshot tests > should match snapshot with single item 1`] = `
<div>
  <section>
    <div
      data-testid="ods-tabs"
      data-value="single-tab"
    >
      <div
        data-testid="ods-tab-list"
      >
        <div
          data-testid="tab-single-tab"
          data-value="single-tab"
        >
          <div>
            title single-tab
          </div>
        </div>
      </div>
      <button
        data-testid="change-tab"
      >
        Change to tab2
      </button>
    </div>
    <div
      class="bg-[--ods-color-primary-050] border border-solid border-[--ods-color-primary-100] border-t-0"
    >
      <div>
        content single-tab
      </div>
    </div>
  </section>
</div>
`;
